-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0, 5.9.0
-
Windows
[REG 5.6->5.8][ANGLE][D3D9]: When D3D9 specifically is used it will cause flickering on resize. This happens as a result of the change - https://chromium.googlesource.com/angle/angle/+/d3b84ab51db09de238459b0dff2e8420c09aabf3%5E%21/#F1. Reverting this change fixes the problem at least.
For Gerrit Dashboard: QTBUG-59893 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
196155,3 | ANGLE: Fix flickering on resize when D3D9 is used | 5.9 | qt/qtbase | Status: MERGED | -2 | 0 |